# nsdot

./: .gitignore  compile_flags.txt  pyproject.toml  pyrightconfig.json  requirements.txt
containers/: README.md  cpu.def  cuda.def
scripts/: run_cpp_tests.py  run_tests.py  validate_wheel.py
src/cpp/sdot/: AffUdPiece.h  Cell.cxx  Cell.h  Image.cxx  Image.h  OtPlan1d.cxx  OtPlan1d.h  Queue.h  SumOfDiracs.cxx  SumOfDiracs.h
src/cpp/sdot/Cell/: CellBoundary.h  init_as_aligned_hypercubes.h
src/cpp/sdot/support/: ASSERT.h  Ct.h  CtStr.h  common_macros.h  common_types.h  display.h  info.h
src/python/sdot/: Cell.py  Image.py  OtPlan1d.py  __init__.py
src/python/sdot/aggregate/: AffineExpr.py  AffineOperand.py  Axis.py  AxisList.py  DynamicShapeVar.py  ShapeVar.py  Tensor.py  TensorList.py  VariableAxesPlaceholder.py  __Tensor.py  __init__.py  aggregate.py
src/python/sdot/compilation/: FfiCode.py  __init__.py  adaptive_cpp.py  generated_headers.py
src/python/sdot/devices/: AppleGpu.py  Cpu.py  CudaGpu.py  Device.py
src/python/sdot/distributions/: Distribution.py  Image.py  SumOfDiracs.py  SumOfDiracs1d.py
tests/cpp/: main.h  test_Display.cpp  test_Matrix.cpp  test_TensorView.cpp  test_Tuple.cpp  test_TupleRep.cpp  test_Vector.cpp  test_main.h  test_sycl_add.cpp
tests/python/: __init__.py  grad_check.py  main.py  test_Axes.py  test_Call.py  test_Cell.py  test_ComputedAttribute.py  test_Distribution_normalization.py  test_Image.py  test_OtPlan1d.py  test_ReferenceShape.py  test_SumOfDiracs.py  test_Tensor.py  test_TensorIterator.py  test_call.py
(+92 files in other folders)
